Fixed .top alignment issue in index.html

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     align-items: center;
     flex: 1;
     padding: 70px 230px 70px 230px;
-
+    justify-content: center;
     color: #f9faf8;
     font-size: 18px;
     gap: 70px;
